# BooTheBot

./: .gitignore  Cargo.toml  README.md
src/: commands.rs  constants.rs  engine.rs  extensions.rs  main.rs
src/handler/: data.rs  interaction.rs  message.rs  mod.rs  response_data.rs
src/models/: animated_emoji.rs  app_state.rs  book_of_answers.rs  bot.rs  clow_cards.rs  custom_id.rs  mod.rs  relationship_level.rs  seed_generator.rs
static/: BookOfAnswers.txt  ClowCardData.json  about.md
