[package]
name = "boothebot"
version = "0.1.0"
edition = "2021"
authors = ["Quang Pham <quangpham@ucmerced.edu>"]
description = "Discord bot giải trí với những tính năng thú vị ngẫu nhiên và tâm linh."

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
twilight-gateway = "0.16.0"
twilight-http = "0.16.0"
twilight-mention = "0.16.0"
twilight-model = "0.16.0"
twilight-util = { version = "0.16.0", features = ["builder", "snowflake"] }
rand = "0.8.5"
rustc-hash = "2"
base64 = "0.22.1"
bincode = { version = "=2.0.0-rc.3", features = ["serde"] }
arrayvec = "0.7.6"
